# CS826_Project

./: .gitignore  1. Inference.ipynb  1. Transfer Learning.ipynb  1.collect_data.ipynb  Comparative study of transfer learning on Brain Tumour MRI image classification.docx  README.md  Untitled.ipynb  main.ipynb  pyproject.toml  requirements.txt
