[tool.poetry]
name = "cs826-project"
version = "0.1.0"
description = ""
authors = ["Asish Binu Mathew <asishbm98@gmail.com>"]
readme = "README.md"
packages = [{include = "cs826_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
notebook = "^6.5.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
